--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,47 +1,41 @@
 <div class="container">
+    <p>Sigue los pasos para obtener tus boletos.</p>
     <div class="row align-items-center">
-        <div class="col align-self-center mt-5">
-            <div class="card animated fadeInDown">
-                <div class="card-header">Obten tus boletos para la graduación</div>
+        <div class="col align-self-center mt-5 mb-5">
+            <div class="card animated fadeInDown shadow p-3 mb-5 bg-white rounded">
                 <div class="card-body">
                     <p>Pasos para obtener los boletos de tu Graduación:</p>
                     <ol>
                         <li>Ingresa tu matricula.</li>
                         <li>Espera a que se valide tu matricula.</li>
-                        <li>Imprime y comparte tus boletos.</li>
+                        <li>Comparte con tus amigos e imprime tus boletos</li>
                     </ol>
                     <div *ngIf="e==false">
                         <p>He entedido los pasos, deseo continuar</p>
-                        <button (click)="entiendo()" class="btn btn-primary">Continuar.</button>
+                        <button (click)="entiendo()" class="btn btn-primary">
+                            Continuar. &nbsp;<i class="far fa-thumbs-up"></i>
+                        </button>
                     </div>
                     <form (ngSubmit)="getOne(m)" #f=ngForm *ngIf="e==true" class="animated flipInX faster">
-                        <div class="form-group mb-2">
-                            <label for="matricula" class="sr-only">Matricula</label>
-                            <input class="form-control"
-                                type="text"
-                                id="matricula"
-                                name="matricula"
-                                placeholder="Ingresa tu matricula"
-                                [(ngModel)]="matricula"
-                                maxlength="11"
-                                required
-                            >
+                        <div class="col-12 col-md-6 col-sm-12">
+                            <div class="form-group mb-2">
+                                <label for="matricula" class="sr-only">Matricula</label>
+                                <input class="form-control"
+                                    type="text"
+                                    id="matricula"
+                                    name="matricula"
+                                    placeholder="Ingresa tu matricula"
+                                    [(ngModel)]="matricula"
+                                    maxlength="11"
+                                    required
+                                >
+                            </div>
                             <small class="form-text text-muted">Ingrese una matricula válida, ejemplo: 12345678-12</small>
+                            <br>
+                            <button type="submit" class="btn btn-outline-primary mb-2">Enviar</button>
                         </div>
-                        <button type="submit" class="btn btn-outline-primary mb-2">Enviar</button>
-                        <div></div>
                     </form>
-
-                    <button class="btn btn-outline-success" data-toggle="modal" data-target="#imprimir">Obtener</button>
-                    <div *ngIf="!tiket">
-                    </div>
-
-                    <!--<p *ngFor="let item of data[0]"></p>
-                    <div *ngFor="let item of data[0]">
-                        <button class="btn btn-outline-success" *ngIf="item.impresion == 0" data-toggle="modal" data-target="#imprimir">Obtener</button>
-                        <button class="btn btn-outline-success" *ngIf="item.impresion == 1" data-toggle="modal" data-target="#imprimir">Re imprimir</button>
-                    </div>
-                    -->
+                    <button *ngIf="tiket === true" class="btn btn-outline-success mt-1 ml-3" data-toggle="modal" data-target="#imprimir">Obtener</button>
                 </div>
                 
             </div>
@@ -50,19 +44,31 @@
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">Boletos</h5>
+                            <h5 class="modal-title" id="exampleModalLabel">Imprime tus Boletos</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
                         </div>
                         <div class="modal-body">
-                            Compartir en redes sociales.
+                            <p>Comparte con tus amigos a través de <strong>Facebook</strong> este logro tan importante en tu vida,
+                                e imprimie tus boletos para la graduación UNIMEX&reg;
+                            </p>
+                            <div class="alert alert-info" role="alert">
+                                <i class="fas fa-exclamation-triangle"></i>
+                                Recuerda que solo podras imprimir tus boletos <strong>una vez.</strong>
+                            </div>
                             <div class="row">
                                 <div class="col">
-                                    <button>Facebook</button>
+                                    <a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Flocalhost%3A4200%2F&amp;src=sdkpreparse">
+                                        <button class="btn btn-outline-primary">
+                                            <i class="fas fa-share-alt"></i>&nbsp;Compartir
+                                        </button>
+                                    </a>
                                 </div>
                                 <div class="col">
-                                    <button (click)="imprimir(m, i)">Imprimir</button>
+                                    <button class="btn btn-outline-success" (click)="imprimir(data)">
+                                        <i class="fas fa-print"></i>&nbsp;Imprimir
+                                    </button>
                                 </div>
                             </div>
                         </div>
