--- a/src/app/components/shared/nav/nav.component.html
+++ b/src/app/components/shared/nav/nav.component.html
@@ -1,3 +1,5 @@
-<nav class="navbar sticky-top navbar-dark bg-primary">
-  <a class="navbar-brand" href="#"></a>
+<nav class="navbar navbar-expand-lg navbar-dark">
+  <a class="navbar-brand" href="http://unimex.edu.mx">
+    <img class="rounded float-left" src="../../../../assets/images/logo-unimex.png" alt="Logo UNIMEX">
+  </a>
 </nav>
