--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <app-nav></app-nav>
-<app-home></app-home>
+<div class="container mt-2">
+    <h1>Graduaciones UNIMEX&reg;</h1>
+</div>
+    <app-home></app-home>
 <app-footer></app-footer>
