--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -68,7 +68,7 @@
     <hr>
     <div class="row">
         <div class="col-md-12">
-            Universidad Mexicana {{ fecha }} &reg; <br><small>Todos los derechos reservados</small>
+            Universidad Mexicana&reg; <br><small>Todos los derechos reservados</small>
         </div>
         <hr>
     </div>
