--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -51,12 +51,13 @@
                         </div>
                         <div class="modal-body">
                             <p>Comparte con tus amigos a través de <strong>Facebook</strong> este logro tan importante en tu vida,
-                                e imprimie tus boletos para la graduación UNIMEX&reg;
+                                después imprimie tus boletos para tu graduación UNIMEX&reg;
                             </p>
                             <div class="alert alert-info" role="alert">
                                 <i class="fas fa-exclamation-triangle"></i>
                                 Recuerda que solo podras imprimir tus boletos <strong>una vez.</strong>
                             </div>
+                            <!--
                             <div class="row">
                                 <div class="col">
                                     <a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Flocalhost%3A4200%2F&amp;src=sdkpreparse">
@@ -66,6 +67,19 @@
                                     </a>
                                 </div>
                                 <div class="col">
+                                    <button class="btn btn-outline-success" (click)="imprimir(data)">
+                                        <i class="fas fa-print"></i>&nbsp;Imprimir
+                                    </button>
+                                </div>
+                            </div>
+                            -->
+                            <div class="row">
+                                <div class="col">
+                                    <button (click)="share()" class="btn btn-outline-primary">
+                                        <i class="fas fa-share-alt"></i>&nbsp;Compartir
+                                    </button>
+                                </div>
+                                <div *ngIf="btn == true" class="col">
                                     <button class="btn btn-outline-success" (click)="imprimir(data)">
                                         <i class="fas fa-print"></i>&nbsp;Imprimir
                                     </button>
