--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="row">
         <div class="col-md-12">
-            <img src="../../../../assets/images/logo-unimex.png" alt="Logo UNIMEX" class="rounded mx-auto d-block">
+            <img src="assets/images/logo-unimex.png" alt="Logo UNIMEX" class="rounded mx-auto d-block">
         </div>
         <hr>
     </div>
