--- a/src/app/components/shared/nav/nav.component.html
+++ b/src/app/components/shared/nav/nav.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark">
   <a class="navbar-brand" href="http://unimex.edu.mx">
-    <img class="rounded float-left" src="assets/images/logo-unimex.png" alt="Logo UNIMEX">
+    <img src="assets/images/logo-largo.png" alt="Logo UNIMEX">
   </a>
 </nav>
