--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,34 @@
-h1 {
-    text-align: center;
+@media (max-width: 575.98px) {
+    h1 {
+        text-align: center;
+        font-size: 2rem;
+    }
+}
+
+@media (min-width: 576px) and (max-width: 767.98px) {
+    h1 {
+        text-align: center;
+        font-size: 2.5rem;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+    h1 {
+        text-align: center;
+        font-size: 2.5rem;
+    }
+}
+
+@media (min-width: 992px) and (max-width: 1199.98px) {
+    h1 {
+        text-align: center;
+        font-size: 3rem;
+    }
+}
+
+@media (min-width: 1200px) {
+    h1 {
+        text-align: center;
+        font-size: 3.5rem;
+    }
 }
