--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <app-nav></app-nav>
-<div class="container mt-2">
+<div class="container">
     <h1>Graduaciones UNIMEX&reg;</h1>
-</div>
     <app-home></app-home>
+
+</div>
 <app-footer></app-footer>
