--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,99 +1,96 @@
-<div class="container">
-    <!--<p>Sigue los pasos para obtener tus boletos.</p>-->
-    <div class="row align-items-center">
-        <div class="col align-self-center mt-5 mb-5">
-            <div class="card animated fadeInDown shadow p-3 mb-5 bg-white rounded">
-                <div class="card-body">
-                    <!---
-                    <p>Pasos para obtener los boletos de tu Graduación:</p>
-                    <ol>
-                        <li>Ingresa tu matricula.</li>
-                        <li>Espera a que se valide tu matricula.</li>
-                        <li>Comparte con tus amigos e imprime tus boletos</li>
-                    </ol>
-                    <div>
-                        <p>He entedido los pasos, deseo continuar</p>
-                        <button (click)="entiendo()" *ngIf="!e" class="btn btn-primary">
-                            Continuar. &nbsp;<i class="far fa-thumbs-up"></i>
+<div class="row align-items-center">
+    <div class="col align-self-center mb-5">
+        <div class="card animated fadeInDown shadow p-3 mb-5 bg-white rounded">
+            <div class="card-body">
+                <!---
+                <p>Pasos para obtener los boletos de tu Graduación:</p>
+                <ol>
+                    <li>Ingresa tu matricula.</li>
+                    <li>Espera a que se valide tu matricula.</li>
+                    <li>Comparte con tus amigos e imprime tus boletos</li>
+                </ol>
+                <div>
+                    <p>He entedido los pasos, deseo continuar</p>
+                    <button (click)="entiendo()" *ngIf="!e" class="btn btn-primary">
+                        Continuar. &nbsp;<i class="far fa-thumbs-up"></i>
+                    </button>
+                </div>
+                -->
+                <p>Comparte en <strong>Facebook</strong> para que todos tus amigos se enteren de que ¡lo lograste!. <br>
+                    Invitalos a que sigan la transmisión por Facebook Live que se realizará el día del evento. <br>
+                    Obtén aquí los boletos para tus invitados <small>( 3 boletos por egresado )</small>.
+                </p>
+                <div *ngIf="!e">
+                    <form class="animated flipInX" [formGroup]="gradForm" (ngSubmit)="getOne()">
+                        <div class="col-12 col-md-6">
+                            <div class="form-group mb-2">
+                                <label for="name">Matricula</label>
+                                <input class="form-control" type="text" formControlName="matricula">
+                            </div>
+                            <div>
+                                <small class="form-text text-muted">Ingrese una matricula válida, ejemplo: 12345678-12</small>
+                                <!--<button class="btn btn-outline-primary mb-2" type="submit" [disabled]="!gradForm.valid">Enviar</button>-->
+                                <button class="btn btn-outline-primary" type="submit" [disabled]="!gradForm.valid">
+                                    <i class="fas fa-share-alt"></i>&nbsp;Compartir e <i class="fas fa-print"></i>&nbsp;Imprimir
+                                </button>
+
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <!--<button *ngIf="tiket" class="btn btn-outline-success mt-1 ml-3" data-toggle="modal" data-target="#imprimir">Obtener</button>
+                <div class="row text-center" *ngIf="tiket">
+                    <div class="col">
+                        <button (click)="share()" class="btn btn-outline-primary">
+                            <i class="fas fa-share-alt"></i>&nbsp;Compartir e <i class="fas fa-print"></i>&nbsp;Imprimir
                         </button>
                     </div>
-                    -->
-                    <p>Comparte en <strong>Facebook</strong> para que todos tus amigos se enteren de que ¡lo lograste!. <br>
-                        Invitalos a que sigan la transmisión por Facebook Live que se realizará el día del evento. <br>
-                        Obtén aquí los boletos para tus invitados <small>( 3 boletos por egresado )</small>.
-                    </p>
-                    <div *ngIf="!e">
-                        <form class="animated flipInX" [formGroup]="gradForm" (ngSubmit)="getOne()">
-                            <div class="col-12 col-md-6">
-                                <div class="form-group mb-2">
-                                    <label for="name">Matricula</label>
-                                    <input class="form-control" type="text" formControlName="matricula">
-                                </div>
-                                <div>
-                                    <small class="form-text text-muted">Ingrese una matricula válida, ejemplo: 12345678-12</small>
-                                    <!--<button class="btn btn-outline-primary mb-2" type="submit" [disabled]="!gradForm.valid">Enviar</button>-->
-                                    <button class="btn btn-outline-primary" type="submit" [disabled]="!gradForm.valid">
-                                        <i class="fas fa-share-alt"></i>&nbsp;Compartir e <i class="fas fa-print"></i>&nbsp;Imprimir
-                                    </button>
-
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                    <!--<button *ngIf="tiket" class="btn btn-outline-success mt-1 ml-3" data-toggle="modal" data-target="#imprimir">Obtener</button>
-                    <div class="row text-center" *ngIf="tiket">
-                        <div class="col">
-                            <button (click)="share()" class="btn btn-outline-primary">
-                                <i class="fas fa-share-alt"></i>&nbsp;Compartir e <i class="fas fa-print"></i>&nbsp;Imprimir
-                            </button>
-                        </div>
-                        
-                        <div *ngIf="btn == true" class="col">
-                            <button class="btn btn-outline-success" (click)="imprimir()">
-                                <i class="fas fa-print"></i>&nbsp;Imprimir
-                            </button>
-                        </div>
-                    </div>
-                    -->
-                </div>
-                
-            </div>
-            <!--modal
-            <div class="modal fade" id="imprimir" tabindex="-1" role="dialog" aria-labelledby="imprimir" aria-hidden="true">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">Imprime tus Boletos</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body">
-                            <p>Comparte en <strong>Facebook</strong> para que todos tus amigos se enteren de que ¡lo lograste!. <br>
-                                Invitalos a que sigan la transmisión por Facebook Live que se realizará el día del evento. <br>
-                                Obtén aquí los boletos para tus invitados <small>( 3 boletos por egresado )</small>.
-                            </p>
-                            <div class="alert alert-info" role="alert">
-                                <i class="fas fa-exclamation-triangle"></i>
-                                Recuerda que solo podras imprimir tus boletos <strong>una vez.</strong>
-                            </div>
-                            <div class="row">
-                                <div class="col">
-                                    <button (click)="share()" class="btn btn-outline-primary">
-                                        <i class="fas fa-share-alt"></i>&nbsp;Compartir
-                                    </button>
-                                </div>
-                                <div *ngIf="btn == true" class="col">
-                                    <button class="btn btn-outline-success" (click)="imprimir()">
-                                        <i class="fas fa-print"></i>&nbsp;Imprimir
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
+                    
+                    <div *ngIf="btn == true" class="col">
+                        <button class="btn btn-outline-success" (click)="imprimir()">
+                            <i class="fas fa-print"></i>&nbsp;Imprimir
+                        </button>
                     </div>
                 </div>
+                -->
             </div>
-            End modal-->
+            
         </div>
+        <!--modal
+        <div class="modal fade" id="imprimir" tabindex="-1" role="dialog" aria-labelledby="imprimir" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Imprime tus Boletos</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Comparte en <strong>Facebook</strong> para que todos tus amigos se enteren de que ¡lo lograste!. <br>
+                            Invitalos a que sigan la transmisión por Facebook Live que se realizará el día del evento. <br>
+                            Obtén aquí los boletos para tus invitados <small>( 3 boletos por egresado )</small>.
+                        </p>
+                        <div class="alert alert-info" role="alert">
+                            <i class="fas fa-exclamation-triangle"></i>
+                            Recuerda que solo podras imprimir tus boletos <strong>una vez.</strong>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <button (click)="share()" class="btn btn-outline-primary">
+                                    <i class="fas fa-share-alt"></i>&nbsp;Compartir
+                                </button>
+                            </div>
+                            <div *ngIf="btn == true" class="col">
+                                <button class="btn btn-outline-success" (click)="imprimir()">
+                                    <i class="fas fa-print"></i>&nbsp;Imprimir
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        End modal-->
     </div>
 </div>
