cambios de area comercial

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -16,8 +16,8 @@
                     </button>
                 </div>
                 -->
-                <p>Comparte en <strong>Facebook</strong> para que todos tus amigos se enteren de que ¡lo lograste!. <br>
-                    Invitalos a que sigan la transmisión por Facebook Live que se realizará el día del evento. <br>
+                <p>Comparte en <strong>Facebook</strong> para que todos tus amigos se enteren de que ¡lo lograste!<br>
+                    Invitalos a que sigan la transmisión por Facebook Live que se realizará el día del evento.<br>
                     Obtén aquí los boletos para tus invitados <small>( 3 boletos por egresado )</small>.
                 </p>
                 <div *ngIf="!e">
